[package]
name = "lq"
description = "low overhead yq/tq/jq cli"
authors = [
    "clux <sszynrae@gmail.com>",
]
version = "0.15.0"
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/clux/lq"
edition = "2021"
rust-version = "1.76.0"
categories = ["command-line-utilities", "parsing"]
keywords = ["yaml", "json", "toml", "query"]

[[bin]]
doc = false
name = "lq"
path = "lq.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["cargo", "derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
toml = { version = "0.9.8", features = ["display", "preserve_order"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
lto = true
panic = "abort"

[profile.dev]
debug = 0
#strip = "symbols"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/lq-{ target }{ archive-suffix }"
bin-dir = "lq-{ target }/{ bin }{ format }"
